fix(feed-post): change to overflow-x because css bug in webkit browsers

--- a/src/views/subplebbits/subplebbit/subplebbit.module.css
+++ b/src/views/subplebbits/subplebbit/subplebbit.module.css
@@ -115,7 +115,7 @@
 
 .authorAddressWrapper {
   display: inline-block;
-  overflow: clip;
+  overflow-x: clip;
 }
 
 /* use the crypto name as the width of the html element, but hide it and display the verified author address instead */
